회원가입 API 개발 및 테스트 완료

--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -25,6 +25,8 @@
       <script src="/js/user/lib/counterup/counterup.min.js"></script>
       <script src="/js/user/lib/lightbox/js/lightbox.min.js"></script>
       <script src="/js/user/lib/owlcarousel/owl.carousel.min.js"></script>
+      <script src="/node_modules/vue/dist/vue.min.js"></script>
+      <script src="/node_modules/axios/dist/axios.min.js"></script>
       <script src="/js/user/lib/main.js"></script>
   </head>
 
