review.html생성 후 기본 틀 수정

--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -7,6 +7,7 @@
       <meta content="" name="keywords">
       <meta content="" name="description">
       
+      <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
       <!-- CSS -->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
       <link href="/node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -25,9 +26,10 @@
       <script src="/js/user/lib/counterup/counterup.min.js"></script>
       <script src="/js/user/lib/lightbox/js/lightbox.min.js"></script>
       <script src="/js/user/lib/owlcarousel/owl.carousel.min.js"></script>
-      <script src="/js/user/lib/main.js"></script>
+      <script  type="module" src="/js/user/lib/main.js"></script>
   </head>
-
+  <script>
+  </script>
   <body>
 
       <!-- Spinner Start -->
