--- a/frontend/view/user/userLogin.html
+++ b/frontend/view/user/userLogin.html
@@ -17,71 +17,24 @@
         <div id="loginBoxTitle">회원 Login</div>
         <div id="inputBox">
           <div class="form-group">
-            <label>고객 아이디</label>
-            <input type="text" name="email" id="email" v-model="email" class="form-control" >
-            <div v-if="emailError" class="text-danger">{{ emailError }}</div>
+            <label>회원 아이디</label>
+            <input type="text" name="id" id="id" v-model="id" class="form-control" >
+            <div v-if="idError" class="text-danger">{{ idError }}</div>
           </div>
           <div class="form-group">
             <label>비밀번호</label>
-            <input type="password" name="upw" id="upw" v-model="upw" class="form-control" autocomplete="off">
+            <input type="password" name="password" id="uppasswordw" v-model="password" class="form-control" autocomplete="off">
           </div>
           <div id="login-btn-box">
-            <div><span> 아이디 저장</span> <input type="checkbox" id="workSite" name="worksite" style="margin-bottom: 5px" v-model="checkId"></div>
+            <div><span> 아이디 저장</span> <input type="checkbox" id="workSite" name="worksite" style="margin-bottom: 5px" ></div>
             <input type="hidden" value="0" id="loginGroup">
-            <div><input type="button" id="btnLogin" value="로그인" class="btn btn-danger" @click="login"></div>
+            <div><input type="button" id="btnLogin" value="로그인" class="btn btn-danger" @click="login()"></div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Bootstrap js -->
+    <!-- js -->
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      new Vue({
-        el: "#inputBox",
-        data: {
-          email: '',
-          upw: '',
-          checkId: '',
-          emailError: '',
-          loginGroup: document.getElementById('loginGroup').value
-        },
-        methods: {
-          validateEmail() {
-            const emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
-            if (!emailPattern.test(this.email)) {
-              this.emailError = '유효하지 않은 아이디 형식입니다.';
-              return false;
-            }
-            this.emailError = '';
-            return true;
-          },
-          login() {
-            if (this.validateEmail()) {
-              axios.post('/api/users/login', {
-                email: this.email,
-                upw: this.upw,
-                checkId: this.checkId,
-                loginGroup : this.loginGroup
-              })
-              .then(response => {
-                
-                if (response.data.data.loginSuccess) {
-                  console.log("로그인 성공")
-                }
-
-                if (response.data.data.loginFail) {
-                  console.log("로그인 실패")
-                }
-           
-              })
-              .catch(error => {
-                console.error('로그인 실패:', error);
-                // 로그인 실패 후 처리 로직 추가
-              });
-            }
-          }
-        }
-      });
-    </script>
+    <script src="/js/user/lib/userLogin.js"></script>
   </body>
 </html>
