commit before merge main branch

--- a/frontend/view/owner/review.html
+++ b/frontend/view/owner/review.html
@@ -234,7 +234,7 @@
               <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                 <i class="fa fa-solid fa-star fa-3x text-primary"></i>
                 <div class="ms-3">
-                  <p class="mb-2">오늘 리뷰 총 평점</p>
+                  <p class="mb-2">오늘 리뷰 평점</p>
                   <h6 class="mb-0">{{totalAvgTodayScore}}</h6>
                 </div>
               </div>
