--- a/frontend/view/user/userLogin.html
+++ b/frontend/view/user/userLogin.html
@@ -1,16 +1,84 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인</title>
-    <script src="/node_modules/vue/dist/vue.js"></script>
-    <script src="/node_modules/axios/dist/axios.js"></script>
-    <!-- Bootstrap CSS -->
+    <meta charset="utf-8">
+    <title>스마트한 예약 경험 | 로그인</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="/node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="/css/user/animate/animate.min.css" rel="stylesheet">
+    <link href="/css/user/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="/css/user/owlcarousel/owl.carousel.min.css" rel="stylesheet">
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- 나의 스타일 추가 -->
-    <link href="/css/user/login.css" rel="stylesheet">
-  </head>
+    <link href="/css/user/mainlogo.css" rel="stylesheet">
+    <!-- 자바스크립트 -->
+     <script src="https://kit.fontawesome.com/9ebc532cee.js" crossorigin="anonymous"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/user/lib/wow/wow.min.js"></script>
+    <script src="/js/user/lib/easing/easing.min.js"></script>
+    <script src="/js/user/lib/waypoints/waypoints.min.js"></script>
+    <script src="/js/user/lib/counterup/counterup.min.js"></script>
+    <script src="/js/user/lib/lightbox/js/lightbox.min.js"></script>
+    <script src="/js/user/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/node_modules/vue/dist/vue.min.js"></script>
+    <script src="/node_modules/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.rawgit.com/rikmms/progress-bar-4-axios/0a3acf92/dist/index.js"></script>
+    <script src="/js/user/lib/main.js"></script>
+</head>
+<div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+  <div class="spinner-grow text-primary" role="status"></div>
+</div>
+<div id="app" class="bg-light">
+<div class="container-fluid bg-light">
+  <div class="container p-3 mb-3">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand fs-3 text-warning fw-bold" href="#"><i class="fa-light fa-utensils"></i>SmartReserve</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <div v-if="loginYN==true">
+            <img v-bind:src="`${profileImageUrl}`">
+            <span>
+              {{ name }}님 환영합니다!
+            </span>
+          </div>
+          <div v-else>
+            <button class="btn btn-outline-warning m-2" type="submit">로그인</button>
+            <button class="btn btn-outline-warning m-2" type="submit">회원가입</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+</div>
   <body class="text-center">
     <div id="container">
       <div id="loginBox">
@@ -33,8 +101,6 @@
         </div>
       </div>
     </div>
-    <!-- js -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/user/lib/userLogin.js"></script>
   </body>
 </html>
