--- a/frontend/css/user/mainlogo.css
+++ b/frontend/css/user/mainlogo.css
@@ -1,4 +1,12 @@
 
+body {
+  font-family: 'Apple SD Gothic Neo';
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
 /*** Spinner Start ***/
 #spinner {
   opacity: 0;
@@ -21,4 +29,9 @@
 
 #app {
   height: 100vh;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
 }
